--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
+NODE_ENV=development
 
+PORT=4078
+HOST_NAME=localhost
+
+DB_HOST=localhost
+DB_PORT=3307
+DB_USER=root
+DB_PASSWORD=password
+DB_NAME=hoidanit
