--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=4078
 HOST_NAME=localhost
 
-DB_HOST=localhost
+DB_HOST=mongodb://localhost:27018
 DB_PORT=3307
 DB_USER=root
 DB_PASSWORD=123456
